tests/grammar/snapshots/r#mod__grammar__alpha034__string_empty_interpolation.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(r#\"\"test {} end\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "test ",
        ),
        1..6,
    ),
    (
        Token(
            "{",
        ),
        6..7,
    ),
    (
        Token(
            "}",
        ),
        7..8,
    ),
    (
        Token(
            " end",
        ),
        8..12,
    ),
    (
        Token(
            "\"",
        ),
        12..13,
    ),
]
