tests/grammar/snapshots/r#mod__grammar__alpha034__ternary-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"true then 1\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Ternary(
                                    (
                                        Boolean(
                                            (
                                                true,
                                                0..4,
                                            ),
                                        ),
                                        0..4,
                                    ),
                                    (
                                        "then",
                                        5..9,
                                    ),
                                    (
                                        Number(
                                            (
                                                1.0,
                                                10..11,
                                            ),
                                        ),
                                        10..11,
                                    ),
                                    (
                                        "",
                                        11..11,
                                    ),
                                    (
                                        Error,
                                        11..11,
                                    ),
                                ),
                                0..11,
                            ),
                        ),
                        0..11,
                    ),
                ),
                0..11,
            ),
        ],
    ),
    [
        found end of input at 11..11 expected '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', or '"else"',
        found end of input at 11..11 expected something else, or expression,
    ],
)
