tests/grammar/snapshots/r#mod__grammar__alpha034__text-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"\\\"Hello, {name}! How are you?\\\"\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Text(
                            [
                                (
                                    Text(
                                        (
                                            "Hello, ",
                                            1..8,
                                        ),
                                    ),
                                    1..8,
                                ),
                                (
                                    Expression(
                                        (
                                            Var(
                                                (
                                                    "name",
                                                    9..13,
                                                ),
                                            ),
                                            9..13,
                                        ),
                                    ),
                                    8..14,
                                ),
                                (
                                    Text(
                                        (
                                            "! How are you?",
                                            14..28,
                                        ),
                                    ),
                                    14..28,
                                ),
                            ],
                        ),
                        0..29,
                    ),
                ),
                0..29,
            ),
        ),
        0..29,
    ),
]
