tests/grammar/snapshots/r#mod__grammar__alpha034__text-8.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(r#\"\"\\\"\"#))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Text(
                                    [
                                        (
                                            Text(
                                                (
                                                    "\\\"",
                                                    1..3,
                                                ),
                                            ),
                                            1..3,
                                        ),
                                    ],
                                ),
                                0..3,
                            ),
                        ),
                        0..3,
                    ),
                ),
                0..3,
            ),
        ],
    ),
    [
        found end of input at 3..3 expected any, '"\\"', '"{"', or '"\""',
    ],
)
