tests/grammar/snapshots/r#mod__grammar__alpha034__var_init-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"let a = 10 + 2 * 3\"))"
---
[
    (
        Statement(
            (
                VariableInit(
                    (
                        "let",
                        0..3,
                    ),
                    (
                        "a",
                        4..5,
                    ),
                    (
                        Expression(
                            (
                                Add(
                                    (
                                        Number(
                                            (
                                                10.0,
                                                8..10,
                                            ),
                                        ),
                                        8..10,
                                    ),
                                    (
                                        Multiply(
                                            (
                                                Number(
                                                    (
                                                        2.0,
                                                        13..14,
                                                    ),
                                                ),
                                                13..14,
                                            ),
                                            (
                                                Number(
                                                    (
                                                        3.0,
                                                        17..18,
                                                    ),
                                                ),
                                                17..18,
                                            ),
                                        ),
                                        13..18,
                                    ),
                                ),
                                8..18,
                            ),
                        ),
                        8..18,
                    ),
                ),
                0..18,
            ),
        ),
        0..18,
    ),
]
