tests/grammar/snapshots/r#mod__grammar__alpha034__var_init.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"let a = 10\"))"
---
[
    (
        Statement(
            (
                VariableInit(
                    (
                        "let",
                        0..3,
                    ),
                    (
                        "a",
                        4..5,
                    ),
                    (
                        Expression(
                            (
                                Number(
                                    (
                                        10.0,
                                        8..10,
                                    ),
                                ),
                                8..10,
                            ),
                        ),
                        8..10,
                    ),
                ),
                0..10,
            ),
        ),
        0..10,
    ),
]
